# code_monger

./: .gitignore  README.md  RELEASE_NOTES.md  pyprojecty.toml  run_examples.py  setup.py
code_monger/: __init__.py  code_generator.py  intro.py
codes/: my_codes.txt
examples/: __init__.py  all_examples.py  code_validation.py  custom_code_generation.py  more_on_the_codegenerator_class.py  simple_code_generation.py
src/: pyproject.toml
tests/: __init__.py  test_code_generation.py  test_code_validation.py  test_fetching_and_deletion.py
